force-app/main/default/objects/ProgramRequest__c/ProgramRequest__c.object-meta.xml
<CustomObject>
    <label>תכנית למעסיק</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>ProgramRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>תכניות למעסיק</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>