force-app/main/default/objects/ProgramRequest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ארגון</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>תוכניות למעסיק</relationshipLabel>
    <relationshipName>ProgramRequests</relationshipName>
    <type>Lookup</type>
</CustomField>