force-app/main/default/objects/ProgramRequest__c/fields/Account_City_f__c.field-meta.xml
<CustomField>
    <fullName>Account_City_f__c</fullName>
    <formula>Request__r.Account__r.Account_City__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account_City_f</label>
    <type>Text</type>
</CustomField>