force-app/main/default/objects/ProgramRequest__c/fields/Account_Name_f_PR__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_f_PR__c</fullName>
    <formula>Request__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name f PR</label>
    <type>Text</type>
</CustomField>