force-app/main/default/objects/ProgramRequest__c/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מגיע מממשק</label>
    <type>Checkbox</type>
</CustomField>