force-app/main/default/objects/ProgramRequest__c/fields/Area_f__c.field-meta.xml
<CustomField>
    <fullName>Area_f__c</fullName>
    <formula>CASE(Request__r.Area__c, &quot;National&quot;, &quot;כל הארץ&quot;,&quot;North&quot;, &quot;צפון&quot;, &quot;Center&quot;, &quot;מרכז&quot;, &quot;Jerusalem&quot;, &quot;ירושלים&quot;, &quot;South&quot;, &quot;דרום&quot;,&quot;אילת&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area f</label>
    <type>Text</type>
</CustomField>