force-app/main/default/objects/ProgramRequest__c/fields/Authorized_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory__c</fullName>
    <label>שם מורשה חתימה</label>
    <length>50</length>
    <type>Text</type>
</CustomField>