force-app/main/default/objects/ProgramRequest__c/fields/Available_Voucher_stock__c.field-meta.xml
<CustomField>
    <fullName>Available_Voucher_stock__c</fullName>
    <formula>Voucher_Stock__r.Qty_vouchers_available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מלאי שוברים עדכני</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>