force-app/main/default/objects/ProgramRequest__c/fields/Branch_Address_f__c.field-meta.xml
<CustomField>
    <fullName>Branch_Address_f__c</fullName>
    <formula>Request__r.Branch__r.Branch_City__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Address f</label>
    <type>Text</type>
</CustomField>