force-app/main/default/objects/ProgramRequest__c/fields/Branch_Employment__c.field-meta.xml
<CustomField>
    <fullName>Branch_Employment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>האם העובדים יועסקו בסניף או שלוחה?</label>
    <type>Checkbox</type>
</CustomField>