force-app/main/default/objects/ProgramRequest__c/fields/CheckDuplicateFields__c.field-meta.xml
<CustomField>
    <fullName>CheckDuplicateFields__c</fullName>
    <formula>Request__r.Name &amp; &apos; - &apos; &amp;  Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckDuplicateFields</label>
    <type>Text</type>
</CustomField>