force-app/main/default/objects/ProgramRequest__c/fields/City_Train_Pract__c.field-meta.xml
<CustomField>
    <fullName>City_Train_Pract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>עיר הכשרה מעשית</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>ProgramRequests (עיר הכרשה מעשית)</relationshipLabel>
    <relationshipName>ProgramRequests2</relationshipName>
    <type>Lookup</type>
</CustomField>