force-app/main/default/objects/ProgramRequest__c/fields/City_Train_Theo__c.field-meta.xml
<CustomField>
    <fullName>City_Train_Theo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>עיר הכשרה עיונית</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>ProgramRequests (עיר הכשרה עיונית)</relationshipLabel>
    <relationshipName>ProgramRequests3</relationshipName>
    <type>Lookup</type>
</CustomField>