force-app/main/default/objects/ProgramRequest__c/fields/College_City__c.field-meta.xml
<CustomField>
    <fullName>College_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>יישוב</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>תוכניות למעסיק</relationshipLabel>
    <relationshipName>ProgramRequests1</relationshipName>
    <type>Lookup</type>
</CustomField>