force-app/main/default/objects/ProgramRequest__c/fields/College_House_Num__c.field-meta.xml
<CustomField>
    <fullName>College_House_Num__c</fullName>
    <label>בית</label>
    <length>10</length>
    <type>Text</type>
</CustomField>