force-app/main/default/objects/ProgramRequest__c/fields/College_ID__c.field-meta.xml
<CustomField>
    <fullName>College_ID__c</fullName>
    <label>סמל מכללה</label>
    <length>50</length>
    <type>Text</type>
</CustomField>