force-app/main/default/objects/ProgramRequest__c/fields/Contact_Email_f__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_f__c</fullName>
    <formula>Request__r.Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email f</label>
    <type>Text</type>
</CustomField>