force-app/main/default/objects/ProgramRequest__c/fields/Contact_Mobile_f__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile_f__c</fullName>
    <formula>Request__r.Primary_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mobile f</label>
    <type>Text</type>
</CustomField>