force-app/main/default/objects/ProgramRequest__c/fields/Contact_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_f__c</fullName>
    <formula>Primary_Contact_PR__r.FirstName  +&quot; &quot;+  Primary_Contact_PR__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name f</label>
    <type>Text</type>
</CustomField>