force-app/main/default/objects/ProgramRequest__c/fields/Employees_f__c.field-meta.xml
<CustomField>
    <fullName>Employees_f__c</fullName>
    <formula>Request__r.Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employees f</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>