force-app/main/default/objects/ProgramRequest__c/fields/Employees_Requested_f__c.field-meta.xml
<CustomField>
    <fullName>Employees_Requested_f__c</fullName>
    <description>מספר העובדים שביקשו בבקשה שהוגשה</description>
    <formula>TEXT(Request__r.Employees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>עובדים שהוגשו להכשרה</label>
    <type>Text</type>
</CustomField>