force-app/main/default/objects/ProgramRequest__c/fields/Employment_City__c.field-meta.xml
<CustomField>
    <fullName>Employment_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>יישוב העסקה</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>תוכניות למעסיק</relationshipLabel>
    <relationshipName>ProgramRequests</relationshipName>
    <type>Lookup</type>
</CustomField>