force-app/main/default/objects/ProgramRequest__c/fields/Estimate_Duration_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Duration_In_Hours__c</fullName>
    <label>משך הכשרה משוער בשעות</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>