force-app/main/default/objects/ProgramRequest__c/fields/Estimated_Workers_Demand__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Workers_Demand__c</fullName>
    <label>אומדן הביקוש לעובדים במקצוע זה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0- 100 עובדים</fullName>
            </value>
            <value>
                <fullName>100 - 1000 עובדים</fullName>
            </value>
            <value>
                <fullName>מעל 1000 עובדים</fullName>
            </value>
            <value>
                <fullName>אין לי מידע או אומדן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>