force-app/main/default/objects/ProgramRequest__c/fields/Expired_Vouchers_Count_PR_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Expired_Vouchers_Count_PR_Voucher__c</fullName>
    <defaultValue>0</defaultValue>
    <description>שדה שסופר כמה שוברים פגי תוקף יש בתוכנית למעסיק</description>
    <label>Expired Vouchers Count PR Voucher</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>