force-app/main/default/objects/ProgramRequest__c/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>for Magar is the request number</description>
    <externalId>true</externalId>
    <label>ExtId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>