force-app/main/default/objects/ProgramRequest__c/fields/Hiring_Reason_f__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Reason_f__c</fullName>
    <formula>TEXT(Request__r.Hiring_Reason__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hiring_Reason_f</label>
    <type>Text</type>
</CustomField>