force-app/main/default/objects/ProgramRequest__c/fields/Job_f__c.field-meta.xml
<CustomField>
    <fullName>Job_f__c</fullName>
    <formula>Request__r.Job__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שם המשרה/התפקיד הנדרש</label>
    <type>Text</type>
</CustomField>