force-app/main/default/objects/ProgramRequest__c/fields/License_or_certification_required__c.field-meta.xml
<CustomField>
    <fullName>License_or_certification_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>האם המקצוע דורש רישוי או הסמכה</label>
    <type>Checkbox</type>
</CustomField>