force-app/main/default/objects/ProgramRequest__c/fields/locating_employees__c.field-meta.xml
<CustomField>
    <fullName>locating_employees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>סיוע באיתור וגיוס עובדים</label>
    <type>Checkbox</type>
</CustomField>