force-app/main/default/objects/ProgramRequest__c/fields/Mail_Employer__c.field-meta.xml
<CustomField>
    <fullName>Mail_Employer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>שליחת דוא&quot;ל למעסיק</label>
    <type>Checkbox</type>
</CustomField>