force-app/main/default/objects/ProgramRequest__c/fields/Mobile_Train_Pract__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Train_Pract__c</fullName>
    <label>נייד הכשרה מעשית</label>
    <type>Phone</type>
</CustomField>