force-app/main/default/objects/ProgramRequest__c/fields/Num_Train_Pract__c.field-meta.xml
<CustomField>
    <fullName>Num_Train_Pract__c</fullName>
    <label>מספר הכשרה מעשית</label>
    <length>100</length>
    <type>Text</type>
</CustomField>