force-app/main/default/objects/ProgramRequest__c/fields/Num_Train_Theo__c.field-meta.xml
<CustomField>
    <fullName>Num_Train_Theo__c</fullName>
    <label>מספר הכשרה עיונית</label>
    <length>100</length>
    <type>Text</type>
</CustomField>