force-app/main/default/objects/ProgramRequest__c/fields/NumApprovedEthyopianPopulation__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedEthyopianPopulation__c</fullName>
    <label>יוצאי אתיופיה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>