force-app/main/default/objects/ProgramRequest__c/fields/NumApprovedFromArabPopulation__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedFromArabPopulation__c</fullName>
    <label>מגזר ערבי</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>