force-app/main/default/objects/ProgramRequest__c/fields/NumApprovedFromHarediPopulationFemale__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedFromHarediPopulationFemale__c</fullName>
    <label>מספר נשים שאושרו מהאוכלוסיה החרדית</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>