force-app/main/default/objects/ProgramRequest__c/fields/NumApprovedFromHarediPopulationMale__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedFromHarediPopulationMale__c</fullName>
    <label>מספר גברים שאושרו מהאוכלוסיה החרדית</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>