force-app/main/default/objects/ProgramRequest__c/fields/NumApprovedSingleParents__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedSingleParents__c</fullName>
    <label>הורים יחידים</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>