force-app/main/default/objects/ProgramRequest__c/fields/NumApprovedSocialNeeds__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedSocialNeeds__c</fullName>
    <label>אוכלוסיית רווחה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>