force-app/main/default/objects/ProgramRequest__c/fields/NumApprovedSocialyTreated__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedSocialyTreated__c</fullName>
    <label>נמצאים על רצף טיפולי</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>