force-app/main/default/objects/ProgramRequest__c/fields/NumApprovedTeenagersAtRisk__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedTeenagersAtRisk__c</fullName>
    <label>צעירים בסיכון</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>