force-app/main/default/objects/ProgramRequest__c/fields/NumApprovedWithDisabilities__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedWithDisabilities__c</fullName>
    <label>בעלי מוגבלויות</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>