force-app/main/default/objects/ProgramRequest__c/fields/NumApprovedYotzimBeShela__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedYotzimBeShela__c</fullName>
    <label>יוצאים בשאלה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>