force-app/main/default/objects/ProgramRequest__c/fields/Number_Requested__c.field-meta.xml
<CustomField>
    <fullName>Number_Requested__c</fullName>
    <label>Number Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>