force-app/main/default/objects/ProgramRequest__c/fields/Opened_Following_Recomme__c.field-meta.xml
<CustomField>
    <fullName>Opened_Following_Recomme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>נפתח בעקבות המלצת רכז</label>
    <type>Checkbox</type>
</CustomField>