force-app/main/default/objects/ProgramRequest__c/fields/Operator_Contact_PR__c.field-meta.xml
<CustomField>
    <fullName>Operator_Contact_PR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>איש קשר מטעם המפעיל</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>תוכניות למעסיק</relationshipLabel>
    <relationshipName>ProgramRequests1</relationshipName>
    <type>Lookup</type>
</CustomField>