force-app/main/default/objects/ProgramRequest__c/fields/PaymentFirstStageDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentFirstStageDate__c</fullName>
    <label>תאריך תשלום המענק בפעימה הראשונה</label>
    <type>Date</type>
</CustomField>