force-app/main/default/objects/ProgramRequest__c/fields/PaymentSecondStageDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentSecondStageDate__c</fullName>
    <label>תאריך תשלום המענק בפעימה השניה</label>
    <type>Date</type>
</CustomField>