force-app/main/default/objects/ProgramRequest__c/fields/PostalCode_Train_Pract__c.field-meta.xml
<CustomField>
    <fullName>PostalCode_Train_Pract__c</fullName>
    <label>מיקוד הכשרה מעשית</label>
    <length>10</length>
    <type>Text</type>
</CustomField>