force-app/main/default/objects/ProgramRequest__c/fields/PostalCode_Train_Theo__c.field-meta.xml
<CustomField>
    <fullName>PostalCode_Train_Theo__c</fullName>
    <label>מיקוד הכשרה עיונית</label>
    <length>10</length>
    <type>Text</type>
</CustomField>