force-app/main/default/objects/ProgramRequest__c/fields/Primary_Contact_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name_f__c</fullName>
    <formula>Request__r.Primary_Contact__r.FirstName  +&quot; &quot;+  Request__r.Primary_Contact__r.LastName</formula>
    <label>Primary Contact Name f</label>
    <type>Text</type>
</CustomField>