force-app/main/default/objects/ProgramRequest__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profession</label>
    <referenceTo>Profession__c</referenceTo>
    <relationshipLabel>ProgramRequests</relationshipLabel>
    <relationshipName>ProgramRequests</relationshipName>
    <type>Lookup</type>
</CustomField>