force-app/main/default/objects/ProgramRequest__c/fields/Profession_description__c.field-meta.xml
<CustomField>
    <fullName>Profession_description__c</fullName>
    <label>הסבר קצר על המקצוע</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>