force-app/main/default/objects/ProgramRequest__c/fields/Profession_f__c.field-meta.xml
<CustomField>
    <fullName>Profession_f__c</fullName>
    <formula>Training__r.Professin_Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מגמה</label>
    <type>Text</type>
</CustomField>