force-app/main/default/objects/ProgramRequest__c/fields/Program_Landing_Page_f__c.field-meta.xml
<CustomField>
    <fullName>Program_Landing_Page_f__c</fullName>
    <formula>Program__r.Landing_Page__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Landing Page f</label>
    <type>Text</type>
</CustomField>