force-app/main/default/objects/ProgramRequest__c/fields/Qty_vouchers_requested__c.field-meta.xml
<CustomField>
    <fullName>Qty_vouchers_requested__c</fullName>
    <label>כמות שוברים מבוקשת</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>