force-app/main/default/objects/ProgramRequest__c/fields/Referred_Center_Direction__c.field-meta.xml
<CustomField>
    <fullName>Referred_Center_Direction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הופנה ע&quot;י תכניות המנהל</label>
    <type>Checkbox</type>
</CustomField>