force-app/main/default/objects/ProgramRequest__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>סיבת אי קבלה להכשרה</label>
    <length>200</length>
    <type>Text</type>
</CustomField>