force-app/main/default/objects/ProgramRequest__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>ProgramRequests</relationshipLabel>
    <relationshipName>ProgramRequests</relationshipName>
    <type>Lookup</type>
</CustomField>