force-app/main/default/objects/ProgramRequest__c/fields/Request_Changed__c.field-meta.xml
<CustomField>
    <fullName>Request_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Changed</label>
    <type>Checkbox</type>
</CustomField>