force-app/main/default/objects/ProgramRequest__c/fields/Request_Changed_operator__c.field-meta.xml
<CustomField>
    <fullName>Request_Changed_operator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Changed-operator</label>
    <type>Checkbox</type>
</CustomField>