force-app/main/default/objects/ProgramRequest__c/fields/Request_explanation__c.field-meta.xml
<CustomField>
    <fullName>Request_explanation__c</fullName>
    <label>הסבר לבקשת המקצוע החדש</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>יש הבדל בשכר בין עובדים שהוכשרו לעובדים שלא הוכשרו</fullName>
            </value>
            <value>
                <fullName>לא ניתן לקלוט ולהעסיק את העובדים ללא הכשרה מתאימה</fullName>
            </value>
            <value>
                <fullName>המקצוע דורש רישוי</fullName>
            </value>
            <value>
                <fullName>העובדים לא יוכלו לעבוד על מכונה חדשה ללא הכשרה</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>