force-app/main/default/objects/ProgramRequest__c/fields/Request_Status_f__c.field-meta.xml
<CustomField>
    <fullName>Request_Status_f__c</fullName>
    <description>מציג את מצב הבקשה ביחס להמלצה</description>
    <formula>IF((ISPICKVAL(Request__r.Request_Status__c, &quot;סגור&quot;)&amp;&amp; (ISPICKVAL( Request__r.Closing_Reason__c , &quot;הועבר לטיפול בתוכנית&quot;))&amp;&amp; Program__r.FG__c = TRUE &amp;&amp;  API__c = FALSE), &quot;הועבר למילוי טפסים&quot;, IF(((ISPICKVAL(Request__r.Request_Status__c, &quot;סגור&quot;)&amp;&amp; (ISPICKVAL( Request__r.Closing_Reason__c , &quot;הועבר לטיפול בתוכנית&quot;))  &amp;&amp;Program__r.FG__c = FALSE||  API__c =TRUE)), &quot;הועבר לטיפול המפעיל&quot;, &quot;המלצת רכז&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מצב בקשה</label>
    <type>Text</type>
</CustomField>