force-app/main/default/objects/ProgramRequest__c/fields/Required_education_Training_f__c.field-meta.xml
<CustomField>
    <fullName>Required_education_Training_f__c</fullName>
    <formula>Request__r.Required_education_Training__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required education Training f</label>
    <type>Text</type>
</CustomField>