force-app/main/default/objects/ProgramRequest__c/fields/Responsible_contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Responsible_contact_Email__c</fullName>
    <label>Responsible contact Email</label>
    <type>Email</type>
</CustomField>