force-app/main/default/objects/ProgramRequest__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>מסלול סיוע</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מסלול תמרוץ להעסקת ג&apos;וניורים מאוכלוסיות הגיוון</fullName>
            </value>
            <value>
                <fullName>מסלול תמרוץ חזרה לעבודה לעובדים עם מוגבלות ועובדים בני 40 פלוס</fullName>
            </value>
            <value>
                <fullName>מסלול ראשון</fullName>
                <isActive>false</isActive>
                <label>מסלול ראשון</label>
            </value>
            <value>
                <fullName>מסלול שני</fullName>
                <isActive>false</isActive>
                <label>מסלול שני</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>