force-app/main/default/objects/ProgramRequest__c/fields/Same_Address_Pract__c.field-meta.xml
<CustomField>
    <fullName>Same_Address_Pract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>אם הכתובת זהה לבית העסק הכשרה מעשית</label>
    <type>Checkbox</type>
</CustomField>