force-app/main/default/objects/ProgramRequest__c/fields/Same_Program_as_Requested__c.field-meta.xml
<CustomField>
    <fullName>Same_Program_as_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>אותה תוכנית שהמעסיק ביקש</label>
    <type>Checkbox</type>
</CustomField>