force-app/main/default/objects/ProgramRequest__c/fields/Start_Training__c.field-meta.xml
<CustomField>
    <fullName>Start_Training__c</fullName>
    <label>Start Training</label>
    <type>Date</type>
</CustomField>